--- a/netflix.html
+++ b/netflix.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix | Landing page UI Design</title>
+    <link rel="icon" type="image/x-icon" href="netflix-logo-png-2616.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" 
     integrity="undefined" crossorigin="anonymous">
     <link rel="stylesheet" href="netflix.css">
@@ -48,7 +49,7 @@
                     <a href="https://www.instagram.com/officialkeshavkumar/">Instagram profile</a>
                 </div>
         </div>
-        <a class="play" onclick="toggleVideo();"><img src="play.png">Watch Trailer</a>
+        <a class="play" onclick="toggleVideo();"><img class="play-btn" src="play.png">Watch Trailer</a>
     </div>
 
     
